@@ -1,3 +1,7 @@
+14 June 2018: Wouter
+	- #4103: Fix that auth-zone does not insist on SOA record first in
+	  file for url downloads.
+
 12 June 2018: Ralph
 	- Don't count CNAME response types received during qname minimisation as
 	  query restart.
